oneibmcloud/DevOps-Insights#466 Changed base64 process to be compatiable with Java 7